apps/60-services/openclaw/base/cilium-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: openclaw
spec:
  endpointSelector:
    matchLabels:
      app: openclaw
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "18789"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tools
    - fromEndpoints:
        - matchLabels:
            app: n8n
            io.kubernetes.pod.namespace: services
  egress:
    - {}
